[package]
name = "unicorn-engine"
version = "1.0.0"
authors = ["Lazymio"]
documentation = ""
edition = "2018"
include = [
    "/.gitmodules",
    "/COPYING",
    "/Cargo.toml",
    "/README.md",
    "/src/*",
]
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/unicorn-engine/unicorn/"
description = "Rust bindings for the Unicorn engine."
build = "build.rs"
links = "unicorn"

[dependencies]
bitflags = "1.0"
libc = "0.2"
capstone="0.6.0"

[build-dependencies]
build-helper = "0.1"
